# itu-sdse-project

./: .gitignore  Makefile  README.md  action.yml  go.mod  go.sum  pipeline.go  pyproject.toml  requirements.txt
.dvc/: config  dvc.yaml
.dvc/tmp/: lock
.github/workflows/: test_action.yml
docs/: README.md  README_root.md  diagrams.excalidraw  index.md
mlops-sg/: README.md  dataset.py  features.py
mlops-sg/docs/: mkdocs.yml
mlops-sg/mlops_sg/: __init__.py  config.py  dataset.py  features.py  plots.py
mlops-sg/mlops_sg/modeling/: model_selection.py  predict.py  train.py
notebooks/: main.ipynb  main_test.ipynb  model_inference.py  requirements.txt
notebooks/artifacts/: X_test.csv  cat_missing_impute.csv  lead_model_xgboost.json  model_results.json  outlier_summary.csv  train_data_gold.csv  y_test.csv
notebooks/mlruns/135160497205986142/: meta.yaml
notebooks/mlruns/135160497205986142/0506b37479c6486ebf0bc04218d466c6/: meta.yaml
notebooks/mlruns/135160497205986142/11cdaca8b3ac4d75b908c1b5e6e5f793/: meta.yaml
notebooks/mlruns/135160497205986142/4300b7ed47b742b9ac2035e618965681/: meta.yaml
notebooks/mlruns/135160497205986142/434c6af08303431fba48fc2445752052/: meta.yaml
notebooks/mlruns/135160497205986142/b78215b103854381b0aa355f28b8012a/: meta.yaml
notebooks/mlruns/627272652637156136/: meta.yaml
notebooks/mlruns/809533201430882959/: meta.yaml
notebooks/mlruns/models/lead_model/: meta.yaml
src/: __init__.py  config.py  dataset.py  features.py  model_selection.py  plots.py  selection.py  train.py
src/modeling/: model_selection.py  train.py
(+236 files in other folders)
