[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops_sg"
version = "0.0.1"
description = "Our repository for the MLOps project"
authors = [
  { name = "Luke and Yasmine" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["mlops_sg"]
include = ["pyproject.toml", "mlops_sg/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops_sg"]
force-sort-within-sections = true

